feat: add navbar header

--- a/css/style.css
+++ b/css/style.css
@@ -10282,7 +10282,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   padding: 3rem 1.5rem 6rem;
 }
 
-.image img.has-pink-info {
+.image img.has-link-border {
   border: 5px solid #574b90;
 }
 
